--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home-Work:#20</title>
     <link rel="stylesheet" href="css/all.css">
     <link rel="stylesheet" href="css/venobox.css">
     <link rel="stylesheet" href="css/slick.css">
